# tsp

./: .clang-format  CMakeLists.txt  README.md  config.ini  sample.ini
datasets/: 10.tsp  10.txt  11.txt  12.tsp  13.tsp  14.tsp  15.tsp  17.tsp  17.txt  18.tsp  19.tsp  20.tsp  6.tsp  6.txt  7.txt  8.tsp  9.tsp  br17.atsp
include/: application.hpp  tsp.hpp
include/app/: iapplication.hpp  menu_application.hpp  patterns.hpp  preconfigured_application.hpp
include/app/menu/: menu.hpp
include/app/menu/algorithm/: algorithm.hpp  branch_and_bound.hpp  bruteforce.hpp  genetic_algorithm.hpp  simulated_annealing.hpp
include/app/menu/math/: matrix.hpp
include/app/menu/route/: route.hpp
include/application/: iapplication.hpp  patterns.hpp
include/application/configuration/: application.hpp
include/application/configuration/factory/algorithm/: branch_and_bound.hpp  bruteforce.hpp  factory.hpp  genetic.hpp  simulated_annealing.hpp
include/application/menu/: application.hpp
include/application/menu/algorithm/: algorithm.hpp  branch_and_bound.hpp  bruteforce.hpp  genetic_algorithm.hpp  simulated_annealing.hpp
include/application/menu/math/: matrix.hpp
include/application/menu/route/: route.hpp
include/io/: basereader.hpp  reader.hpp
include/io/file/: iparser.hpp
include/io/file/configuration/ini/: parser.hpp  patterns.hpp
include/io/file/ini/: parser.hpp  patterns.hpp
include/io/file/problem/: iproblemparser.hpp
include/io/file/problem/tsp/: parser.hpp  patterns.hpp
include/io/file/problem/txt/: parser.hpp
include/io/file/route/: parser.hpp
include/io/file/tsp/: parser.hpp  patterns.hpp
include/io/file/txt/: parser.hpp
include/math/: matrix.hpp
include/tsp/algorithm/: algorithm.hpp  bf.hpp
include/tsp/algorithm/accurate/: bf.hpp
include/tsp/algorithm/accurate/bb/: dfs.hpp
include/tsp/algorithm/bb/: dfs.hpp
include/tsp/algorithm/inaccurate/genetic/: algorithm.hpp
include/tsp/algorithm/inaccurate/sa/: algorithm.hpp  linear.hpp
include/tsp/neighborhood/: algorithm.hpp  random.hpp
include/tsp/operators/: operator.hpp
include/tsp/operators/crossover/: algorithm.hpp  ox.hpp
include/tsp/operators/mutation/: algorithm.hpp  swap.hpp
include/tsp/operators/selection/: algorithm.hpp  roulette.hpp
include/ui/: menu.hpp
include/ui/menu/: callable_entry.hpp  entry.hpp  submenu.hpp
include/utils/: tokenizer.hpp
src/: application.cpp  main.cpp  tsp.cpp
src/app/: iapplication.cpp  menu_application.cpp  preconfigured_application.cpp
src/app/menu/algorithm/: algorithm.cpp  branch_and_bound.cpp  bruteforce.cpp  genetic_algorithm.cpp  simulated_annealing.cpp
src/app/menu/math/: matrix.cpp
src/app/menu/route/: route.cpp
src/application/: iapplication.cpp
src/application/configuration/: application.cpp
src/application/configuration/factory/algorithm/: branch_and_bound.cpp  bruteforce.cpp  genetic.cpp  simulated_annealing.cpp
src/application/menu/: application.cpp
src/application/menu/algorithm/: algorithm.cpp  branch_and_bound.cpp  bruteforce.cpp  genetic_algorithm.cpp  simulated_annealing.cpp
src/application/menu/math/: matrix.cpp
src/application/menu/route/: route.cpp
src/io/: basereader.cpp  reader.cpp
src/io/file/configuration/ini/: parser.cpp
src/io/file/ini/: parser.cpp
src/io/file/problem/: iproblemparser.cpp
src/io/file/problem/tsp/: parser.cpp
src/io/file/problem/txt/: parser.cpp
src/io/file/route/: parser.cpp
src/io/file/tsp/: parser.cpp
src/io/file/txt/: parser.cpp
src/tsp/algorithm/: algorithm.cpp  bf.cpp
src/tsp/algorithm/accurate/: bf.cpp
src/tsp/algorithm/accurate/bb/: dfs.cpp
src/tsp/algorithm/bb/: dfs.cpp
src/tsp/algorithm/inaccurate/genetic/: algorithm.cpp
src/tsp/neighborhood/: random.cpp
src/tsp/operators/: operator.cpp
src/tsp/operators/crossover/: algorithm.cpp  ox.cpp
src/tsp/operators/mutation/: algorithm.cpp  swap.cpp
src/tsp/operators/selection/: algorithm.cpp  roulette.cpp
src/ui/: menu.cpp
src/ui/menu/: callable_entry.cpp  entry.cpp  submenu.cpp
src/utils/: tokenizer.cpp
